--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,7 @@
             </feature>
         </config-file>
       <source-file src="src/android/chooseimages.java" target-dir="src/com/youbanban/cordova/chooseimages"/>
+      <source-file src="src/android/YuLanActivity.java" target-dir="src/com/youbanban/cordova/chooseimages"/>
       <source-file src="src/android/bean/ImageFloder.java" target-dir="src/com/youbanban/cordova/chooseimages/bean"/>
       <source-file src="src/android/imageloader/ListImageDirPopupWindow.java" target-dir="src/com/youbanban/cordova/chooseimages/imageloader"/>
       <source-file src="src/android/imageloader/MainActivity.java" target-dir="src/com/youbanban/cordova/chooseimages/imageloader"/>
@@ -27,9 +28,14 @@
       <source-file src="src/android/layout/grid_item.xml" target-dir="res/layout"/>
       <source-file src="src/android/layout/list_dir.xml" target-dir="res/layout"/>
       <source-file src="src/android/layout/list_dir_item.xml" target-dir="res/layout"/>
+      <source-file src="src/android/layout/chooseImage_yulan.xml" target-dir="res/layout"/>
 
       <source-file src="src/android/anim/slide_in.xml" target-dir="res/anim"/>
       <source-file src="src/android/anim/slide_out.xml" target-dir="res/anim"/>
+      <source-file src="src/android/anim/push_left_in.xml" target-dir="res/anim"/>
+      <source-file src="src/android/anim/push_left_out.xml" target-dir="res/anim"/>
+      <source-file src="src/android/anim/push_right_in.xml" target-dir="res/anim"/>
+      <source-file src="src/android/anim/push_right_out.xml" target-dir="res/anim"/>
 
       <source-file src="src/android/drawable-hdpi/dir_choose.png" target-dir="res/drawable-hdpi"/>
       <source-file src="src/android/drawable-hdpi/pic_dir.png" target-dir="res/drawable-hdpi"/>
@@ -38,12 +44,15 @@
       <source-file src="src/android/drawable-hdpi/pictures_selected.png" target-dir="res/drawable-hdpi"/>
       <source-file src="src/android/drawable-hdpi/ic_launcher.png" target-dir="res/drawable-hdpi"/>
       <source-file src="src/android/drawable-hdpi/jiaobiao.png" target-dir="res/drawable-hdpi"/>
+      <source-file src="src/android/drawable-hdpi/yellow_background.png" target-dir="res/drawable-hdpi"/>
+      <source-file src="src/android/drawable-hdpi/picture_folder_arrow.png" target-dir="res/drawable-hdpi"/>
 
-      <source-file src="src/android/values/styles.xml" target-dir="res/values"/>
+        <source-file src="src/android/values/styles.xml" target-dir="res/values"/>
 
       <source-file src="src/android/android-support-v4.jar" target-dir="libs" />
       <config-file target="AndroidManifest.xml" parent="/manifest/application">
         <activity android:name="com.youbanban.cordova.chooseimages.imageloader.MainActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity android:name="com.youbanban.cordova.chooseimages.YuLanActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
       </config-file>
       <config-file target="AndroidManifest.xml" parent="/manifest">
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
