--- a/plugin.xml
+++ b/plugin.xml
@@ -46,6 +46,7 @@
       <source-file src="src/android/drawable-hdpi/jiaobiao.png" target-dir="res/drawable-hdpi"/>
       <source-file src="src/android/drawable-hdpi/yellow_background.png" target-dir="res/drawable-hdpi"/>
       <source-file src="src/android/drawable-hdpi/picture_folder_arrow.png" target-dir="res/drawable-hdpi"/>
+      <source-file src="src/android/drawable-hdpi/array_left.png" target-dir="res/drawable-hdpi"/>
 
         <source-file src="src/android/values/styles.xml" target-dir="res/values"/>
 
